Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
@import 'Base/mixins';

.dotvvm-contrib-cookie-bar {
    --cookie-display: none;
    --color-background: hsl(0, 0%, 100%);
    --color-primary: hsl(210, 2%, 17%);
    --color-text: hsl(90, 2%, 17%);
    --color-text--light: hsl(0, 0%, 44%);
    --color-border: hsl(0, 0%, 73%);
    --color-hover: hsl(0, 0%, 92%);
    --color-success: hsl(79, 100%, 37%);
    --color-box-shadow: hsla(0, 0%, 0%, .3);
    --border-width: 1px;
    --dialog_box-shadow: 0 0 6px 0 var(--color-box-shadow);
    --dialog_border-radius: .3em;
    --link_text-decoration: none;
    --transition-time: .25s;
    font-size: 16px;
    color: var(--color-text);

    &__dialog {
        display: var(--dialog-display, none);
        width: calc(100% - 2em);
        max-width: 40em;
        max-height: 90vh;
        border-radius: var(--dialog_border-radius);
        color: var(--color-text);
        overflow: hidden;

        &::backdrop {
            background: hsla(0, 0%, 0%, .6);
        }

        &[open] {
            --dialog-display: grid;
        }

        p {
            font-size: 1em;

            @include res-max-mobile {
                font-size: .875em;
            }
        }
    }

    &__content {
        @include border('top');
        padding-top: 1.5em;

        @include res-max-mobile {
            padding-top: .75em;
        }
    }

    &__title {
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        justify-content: space-between;
        margin-bottom: 1.5em;

        @include res-max-mobile {
            margin-bottom: .75em;
        }

        > h4 {
            font-size: medium;
            margin: 0;

            @include res-max-mobile-small {
                font-size: .8em;
            }
        }

        > a {
            font-size: small;
            font-weight: 400;
            color: var(--color-grey);
            text-decoration: var(--link_text-decoration);
            text-transform: uppercase;
            cursor: pointer;

            &:hover {
                --link_text-decoration: underline;
            }
        }
    }

    &__body {
        padding: 0 2em;

        @include res-max-mobile {
            padding: 0 1em;
        }
    }

    &__header {
        padding: 2em;

        @include res-max-mobile {
            padding: 1em;
        }

        > h3 {
            margin-top: 0;
            margin-bottom: 1em;

            @include res-max-mobile-small {
                margin-bottom: .5em;
                font-size: 1em;
            }
        }

        > p {
            margin-bottom: 0;

            @include res-max-mobile {
                display: -webkit-box;
                width: 100%;
                overflow: hidden;
                -webkit-box-orient: vertical;
                -webkit-line-clamp: 3;
            }
        }
    }

    &__footer {
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        justify-content: right;
        padding: 1.5em 2em;
        gap: 1rem;

        @include res-max-mobile {
            padding: .75em 1em;
        }

        > a {
            text-decoration: underline;
            color: var(--color-text--light);
            font-size: .8em;
        }
    }

    &__options {
        @include border('def');
        border-radius: var(--dialog_border-radius);
        max-height: 40vh;
        overflow: auto;
    }

    &__details {
        --summary-character: '+';
        @include border('bottom');

        &:last-child {
            border-bottom-width: 0;
        }

        &[open] {
            --summary-character: '–';

            > summary {
                --color-background: var(--color-hover);
            }
        }

        > summary {
            background-color: var(--color-background);
            display: flex;
            flex-flow: row nowrap;
            gap: 1rem;
            align-items: center;
            justify-content: center;
            padding: .5em 1em;
            justify-content: space-between;
            height: 3em;
            overflow: hidden;
            cursor: pointer;
            transition: background-color var(--transition-time) ease-in-out;

            @include res-max-mobile {
                padding: .5em;
                height: 2.2em;
            }

            &:hover {
                --color-background: var(--color-hover);
            }

            &::-webkit-details-marker, &::marker {
                display: none;
            }

            > small {
                font-size: small;
                font-weight: 400;
                color: var(--color-text--light);

                @include res-max-mobile-small {
                    font-size: .7em;
                }
            }
        }
    }

    &__rule {
        display: inline-flex;
        gap: .5em;
        left: 2.5em;
        z-index: 10;
        font-size: 16px;
        font-weight: 600;
        gap: .8em;
        align-items: center;

        @include res-max-mobile {
            font-size: 14px;
        }

        &:before {
            content: var(--summary-character);
            font-size: clamp(16px, 2em, 24px);
            line-height: 1;
            color: var(--color-success);
        }
    }

    &__desc {
        display: block;
        font-size: small;

        > p {
            padding: 0 1em 1em;
            font-size: 16px;
            margin-top: 1em;
            margin-bottom: 0;

            @include res-max-mobile {
                font-size: 14px;
            }
        }

        > details {
            @include border('top');
        }
    }
    //PopUp
    &__pop-up {
        --pop-up-max-width: #{$width-mobile};
        --pop-up-left: auto;
        --pop-up-right: 1rem;
        --pop-up-bottom: 1rem;
        position: fixed;
        bottom: var(--pop-up-bottom);
        right: var(--pop-up-right);
        left: var(--pop-up-left);
        display: var(--cookie-display);
        width: 100%;
        padding: 1.5em;
        border-radius: var(--dialog_border-radius);
        max-width: var(--pop-up-max-width);
        width: 100%;
        background: var(--color-background);
        z-index: 999;
        box-shadow: var(--dialog_box-shadow);
        gap: 1em;
        box-sizing: border-box;

        @include res-max-tablet {
            --pop-up-max-width: calc(100% - 2rem);
            --pop-up-left: 1rem;
        }

        @include res-max-mobile {
            --pop-up-max-width: 100%;
            --pop-up-left: 0;
            --pop-up-right: 0;
            --pop-up-bottom: 0;
            padding: 1em;
        }

        @include res-max-mobile-small {
            gap: .5em;
        }

        &--open {
            --cookie-display: grid;
        }

        > h3 {
            margin: 0;

            @include res-max-mobile-small {
                font-size: 1em;
            }
        }

        > p {
            margin: 0;
            font-size: 1em;

            @include res-max-mobile-small {
                font-size: .875em;
            }
        }
    }

    &__buttons {
        display: flex;
        flex-flow: row wrap;
        align-items: center;
        justify-content: space-between;
        gap: 1em;

        .button {
            white-space: pre-wrap;
        }

        > a {
            text-decoration: underline;
            white-space: nowrap;
            color: var(--color-text--light);
            font-size: .8em;
        }

        > div {
            display: inline-grid;
            align-items: stretch;
            justify-content: stretch;
            grid-template-columns: repeat(2, minmax(1rem, 1fr));
            gap: 1em;
        }
    }
    //ToggleButton
    .toggle-button {
        --circle-size: calc(100% - 4px);
        --cicle-trans-x: 2px;
        --toggle-bg: var(--color-text--light);
        --color-background: hsl(0, 0%, 100%);
        position: relative;
        width: 40px;
        min-width: 40px;
        height: 24px;
        font-size: 0;
        background-color: var(--toggle-bg);
        border-radius: 12px;
        transition: background-color var(--transition-time) ease-in-out;
        cursor: pointer;

        &--on {
            --cicle-trans-x: calc(100% - 2px);
            --toggle-bg: var(--color-success);
        }

        > input {
            opacity: 0;
        }

        &:after {
            position: absolute;
            top: 50%;
            left: 0;
            display: block;
            content: '';
            height: var(--circle-size);
            aspect-ratio: 1 / 1;
            background-color: var(--color-background);
            border-radius: 50%;
            transform: translate(var(--cicle-trans-x), -50%);
            transition: background-color var(--transition-time) ease-in-out, transform var(--transition-time) ease-in-out;
            z-index: 999;
        }
    }
}

